--- a/index.html
+++ b/index.html
@@ -25,25 +25,24 @@
             </form>
             <div class="filter-container">
                 <h4>Filter Gallery</h4>
-                <button data-sort="name" type="button" name="button" label="Name" class="filter-btn filter-name">
-                <div class="btn-content">
-                  <p>Name</p>
-                  <div class="sort-arrows">
+                <button data-sort="name" type="button" name="button" class="filter-btn filter-name">
+                <span class="btn-content">
+                  Name
+                  <span class="sort-arrows">
                     <i class="fa fa-sort-asc" aria-hidden="true"></i>
                     <i class="fa fa-sort-desc" aria-hidden="true"></i>
-                  </div>
-                </div>
+                  </span>
+                </span>
               </button>
-                <button data-sort="date" type="button" name="button" label="Date" class="filter-btn filter-date"><div class="btn-content">
-                <p>Date</p>
-                <div class="sort-arrows">
+                <button data-sort="date" type="button" name="button" class="filter-btn filter-date"><span class="btn-content">
+                Date
+                <span class="sort-arrows">
                   <i class="fa fa-sort-asc" aria-hidden="true"></i>
                   <i class="fa fa-sort-desc" aria-hidden="true"></i>
-                </div>
-              </div></button>
+                </span>
+              </span></button>
             </div>
             <div class="gallery"></div>
-            </div>
             <!-- End content -->
         </section>
         <!-- End page wrap -->
@@ -57,10 +56,10 @@
 
                         <div class="album-content">
                             <div class="imageContainer">
-                                <img src="" alt="" />
-                                <h1 class="artist"></h1>
-                                <h2 class="album-name"></h2>
-                                <h2 class="album-year"></h2>
+                                <img src="#" alt="Gallery image" />
+                                <h1 class="artist">Artist</h1>
+                                <h2 class="album-name">Album</h2>
+                                <h2 class="album-year">Year</h2>
                             </div>
                             <div class="tracks">
                                 <h2>Track List</h2>
@@ -79,6 +78,7 @@
                 </div>
                 <div id="nextPhoto" class="btn-change next"><i class="fa fa-angle-right"></i></div>
             </div>
+        </div>
 
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
